Fix menu items alignments

--- a/defence-first-web/src/app/components/menu/menu.component.css
+++ b/defence-first-web/src/app/components/menu/menu.component.css
@@ -3,8 +3,7 @@ button {
     text-align: left;
 }
 mat-toolbar-row {
-    margin-bottom: 35px;
-    padding: 0px;
+    margin-bottom: 60px;
 }
 table, tr, td {
     width: 100%;
